changig bio and links

--- a/_config.yml
+++ b/_config.yml
@@ -82,12 +82,12 @@ analytics:
 author:
   name             : "Elena Orlova"
   avatar           : "profile.jpg"
-  bio              : "CS PhD student at UChicago"
+  bio              : "Co-founder of Simulacra AI | CS PhD @UChicago | AI4Science"
   location         : # "Chicago"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=-z_QAxcAAAAJ&hl=ru"
-  email            : "eorlova@uchicago.edu"
+  email            : "egorlova68@gmail.com"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
